Fixed Responsive to work better on Mobile

--- a/cs/style.css
+++ b/cs/style.css
@@ -73,17 +73,13 @@ p {
  display: none;
 }
 
-/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
-@media screen and (max-width: 600px) {
- .topnav a:not(:first-child) {display: none;}
- .topnav a.icon {
-   float: right;
-   display: block;
- }
-}
-
 /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
 @media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
  .topnav.responsive {position: relative;}
  .topnav.responsive a.icon {
    position: absolute;
@@ -94,5 +90,13 @@ p {
    float: none;
    display: block;
    text-align: left;
+ }
+ .segment{
+   margin: 0px;
+   width: 67%;
+ }
+ html, body {
+   padding: 0px;
+   margin: 0px;
  }
 }
